// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/channel_filter should match snapshot 1`] = `
<div
  className="SidebarFilters"
>
  <a
    aria-label="Filter by unread"
    className="SidebarFilters_filterButton"
    href="#"
    onClick={[Function]}
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={500}
      overlay={
        <Tooltip
          bsClass="tooltip"
          className="hidden-xs"
          id="new-group-tooltip"
          placement="right"
        >
          Filter by unread
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <i
        className="icon icon-filter-variant"
      />
    </OverlayTrigger>
  </a>
  <div>
    <div
      className="SidebarFilters_filterTitle"
    >
      <FormattedMessage
        defaultMessage="VIEWING:"
        id="sidebar_left.channel_filter.viewing"
        values={Object {}}
      />
    </div>
    <div
      className="SidebarFilters_filterDescription"
    >
      <FormattedMessage
        defaultMessage="All channels"
        id="sidebar_left.channel_filter.allChannels"
        values={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`components/sidebar/channel_filter should match snapshot if the unread filter is enabled 1`] = `
<div
  className="SidebarFilters"
>
  <a
    aria-label="Show all channels"
    className="SidebarFilters_filterButton active"
    href="#"
    onClick={[Function]}
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={500}
      overlay={
        <Tooltip
          bsClass="tooltip"
          className="hidden-xs"
          id="new-group-tooltip"
          placement="right"
        >
          Show all channels
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <i
        className="icon icon-filter-variant"
      />
    </OverlayTrigger>
  </a>
  <div>
    <div
      className="SidebarFilters_filterTitle"
    >
      <FormattedMessage
        defaultMessage="FILTERED BY:"
        id="sidebar_left.channel_filter.filteredBy"
        values={Object {}}
      />
    </div>
    <div
      className="SidebarFilters_filterDescription"
    >
      <FormattedMessage
        defaultMessage="Unread"
        id="sidebar_left.channel_filter.unread"
        values={Object {}}
      />
    </div>
  </div>
</div>
`;
